--- a/Filipini.Tests/Filipini.Tests.csproj
+++ b/Filipini.Tests/Filipini.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SistemaFilipini.csproj" />
+    <ProjectReference Include="..\SistemaFilipini\SistemaFilipini.csproj" />
   </ItemGroup>
 
 </Project>
